--- a/dynamixel_controllers/config/head_arm_controller.yaml
+++ b/dynamixel_controllers/config/head_arm_controller.yaml
@@ -24,7 +24,7 @@ right_shoulder_roll_controller:
     joint_name: right_shoulder_roll_joint
     joint_speed: 2.0
     motor:
-        id: 4
+        id: 2
         init: 550
         min: 120  
         max: 550
@@ -37,10 +37,24 @@ right_shoulder_pitch_controller:
     joint_name: right_shoulder_pitch_joint
     joint_speed: 2.0
     motor:
-        id: 5
+        id: 3
         init: 870
         min: 70
         max: 950
+
+right_elbow_pitch_controller:
+    controller:
+        package: dynamixel_controllers
+        module: joint_position_controller
+        type: JointPositionController
+    joint_name: right_elbow_pitch_joint
+    joint_speed: 2.0
+    motor:
+        id: 4
+        init: 370
+        min: 300
+        max: 550
+
 #------------------left arm actuation---------------------
 left_shoulder_roll_controller:
     controller:
@@ -50,9 +64,9 @@ left_shoulder_roll_controller:
     joint_name: right_shoulder_roll_joint
     joint_speed: 2.0
     motor:
-        id: 2
-        init: 550
-        min: 120  
+        id: 5
+        init: 370
+        min: 20  
         max: 550
 
 left_shoulder_pitch_controller:
@@ -63,7 +77,20 @@ left_shoulder_pitch_controller:
     joint_name: right_shoulder_pitch_joint
     joint_speed: 2.0
     motor:
-        id: 3
+        id: 6
         init: 870
         min: 70
         max: 950
+left_elbow_pitch_controller:
+    controller:
+        package: dynamixel_controllers
+        module: joint_position_controller
+        type: JointPositionController
+    joint_name: left_elbow_pitch_joint
+    joint_speed: 2.0
+    motor:
+        id: 7
+        init: 370
+        min: 300
+        max: 550
+
